trunk/Archive2/7b/636333283916dd/output
main.cpp: In function 'int main()':
main.cpp:6:7: error: 'void bad::f(double)' is private
  void f(double) {}
       ^
main.cpp:11:10: error: within this context
  b.f(1.23);
          ^
